# Python-

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.bat  build.sh  test_runner.sh
.github/workflows/: build-windows.yml
_codeql_build_dir/: p++
examples/: advanced_syntax.py  aot_demo.py  aot_refcount_demo.py  basic_operations.py  complete_python_demo.py  control_flow.py  fibonacci.py  functions.py  hello_world.py+  jit_demo.py
include/: advanced_types.h  aot.h  ast.h  bytecode.h  codegen.h  import_system.h  ir.h  jit.h  lexer.h  optimizations.h  parser.h  python_stdlib.h  refcount.h  runtime.h  stdlib.h  type_inference.h  types.h
src/: advanced_types.cpp  aot.cpp  ast.cpp  bytecode.cpp  c_api.cpp  codegen.cpp  import_system.cpp  ir.cpp  jit.cpp  lexer.cpp  main.cpp  optimizations.cpp  parser.cpp  python_stdlib.cpp  refcount.cpp  runner.cpp  runtime.cpp  stdlib.cpp  type_inference.cpp  types.cpp
tests/: CMakeLists.txt  test_aot_compilation.cpp  test_compiler.cpp
